force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/SVMXA360__CONF_LayoutElement__c.object-meta.xml
<CustomObject>
    <description>Stores field and properties info added to the section.</description>
    <label>Layout Element</label>
    <nameField>
        <displayFormat>EN-{0000000000}</displayFormat>
        <label>Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Layout Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>