force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__ApplyMapping__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ApplyMapping__c</fullName>
    <description>Field to store value on when the mapping to be applied for transaction Element. The values are Always/Conditional</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Apply Mapping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>