force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__Column__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Column__c</fullName>
    <description>Element Column position in the section.</description>
    <label>Column</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>