force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__ElementAPIName__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ElementAPIName__c</fullName>
    <description>Stores field API Name.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Element API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>