force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__ElementSequence__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ElementSequence__c</fullName>
    <description>Order in which the element should be displayed in the section: Related tab.</description>
    <label>Element Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>