force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__FormFillMappingId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__FormFillMappingId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores field mapping ID of the lookup reference object to target object.</description>
    <label>Form Fill Mapping</label>
    <referenceTo>SVMXA360__CONF_ObjectMapping__c</referenceTo>
    <relationshipLabel>Layout Elements</relationshipLabel>
    <relationshipName>Layout_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>