force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LayoutId__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LayoutId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the header layout ID for the given element.</description>
    <label>Layout</label>
    <referenceTo>SVMXA360__CONF_Layout__c</referenceTo>
    <relationshipLabel>Layout Elements</relationshipLabel>
    <relationshipName>Layout_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>