force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LayoutRelatedSection__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LayoutRelatedSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Layout Related section.</description>
    <label>Layout Related Section</label>
    <referenceTo>SVMXA360__CONF_LayoutRelatedSection__c</referenceTo>
    <relationshipLabel>Layout Elements</relationshipLabel>
    <relationshipName>LayoutElements</relationshipName>
    <type>Lookup</type>
</CustomField>