force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LayoutSection__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LayoutSection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Layout section.</description>
    <label>Layout Section</label>
    <referenceTo>SVMXA360__CONF_LayoutSection__c</referenceTo>
    <relationshipLabel>Layout Elements</relationshipLabel>
    <relationshipName>LayoutElements</relationshipName>
    <type>Lookup</type>
</CustomField>