force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LookupConfiguration__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LookupConfiguration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup configuration for the elements of data type lookup</description>
    <label>Lookup Configuration</label>
    <referenceTo>SVMXA360__CONF_LookupConfiguration__c</referenceTo>
    <relationshipLabel>Layout Elements</relationshipLabel>
    <relationshipName>Layout_Elements</relationshipName>
    <type>Lookup</type>
</CustomField>