force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LookupContext__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LookupContext__c</fullName>
    <description>Field context to match on the lookup results</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Context</label>
    <length>100</length>
    <type>Text</type>
</CustomField>