force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LookupContextSource__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LookupContextSource__c</fullName>
    <description>The source of the lookup context is based on which the filter is applied.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Context Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>