force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__LookupMatchingField__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__LookupMatchingField__c</fullName>
    <description>Field to be matched on the lookup object with the field context</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Lookup Matching Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>