force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__OverrideLookupContext__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__OverrideLookupContext__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If enabled, lookup context will be overridden with the configured values</description>
    <label>Override Lookup Context</label>
    <type>Checkbox</type>
</CustomField>