force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to True, the field is read-only on the layout.</description>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>