force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__Required__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to True, the field is marked Required on the layout.</description>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>