force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__Row__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Row__c</fullName>
    <description>Element Row position in the section.</description>
    <label>Row</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>