force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__Title__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Title__c</fullName>
    <description>Stores the title of the layout element.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>