force-app/main/default/objects/SVMXA360__CONF_LayoutElement__c/fields/SVMXA360__Type__c.field-meta.xml
<CustomField>
    <fullName>SVMXA360__Type__c</fullName>
    <description>To identify type of element.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Field</fullName>
            </value>
            <value>
                <fullName>Empty Space</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>